--- a/index.html
+++ b/index.html
@@ -299,15 +299,15 @@
 									<a href="tel:+79991246655">+7(999)124-66-55</a>
 								</div>
 								<div class="contacts-column__item">
-									<a href="https://telegram.me/sanchessssssssssss">Написать автору</a>
+									<a href="https://telegram.me/sanchessssssssssss">Telegramу</a>
 								</div>
 
 								<div class="contacts-column__item">
-									<a href="viber://chat?number=%2B79991246655">Ссылка на чат Viber</a>
+									<a href="viber://chat?number=%2B79991246655">Viber</a>
 								</div>
 
 								<div class="contacts-column__item">
-									<a href="https://wa.me/79991246655">Чат с пользователем WhatsApp</a>
+									<a href="https://wa.me/79991246655">WhatsApp</a>
 								</div>
 
 
