--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 									<a href="tel:+79991246655">+7(999)124-66-55</a>
 								</div>
 								<div class="contacts-column__item">
-									<a href="https://telegram.me/sanchessssssssssss">Telegramу</a>
+									<a href="https://telegram.me/sanchessssssssssss">Telegram</a>
 								</div>
 
 								<div class="contacts-column__item">
