--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
 						<a href="#" class="logo__link"> PROPHOTO SERVICES</a>
 					</div>
 					<nav class="menu">
+
+						<input id="menu__toggle" type="checkbox">
+						<label for="menu__toggle" class="menu__btn">
+							<span></span>
+						</label>
+
 						<ul class="menu__list">
 							<li class="menu__list-item">
 								<a class="menu__list-link" href="#totop">Главная</a>
@@ -36,6 +42,8 @@
 								<a class="menu__list-link" href="#contact">Контакты</a>
 							</li>
 						</ul>
+
+
 					</nav>
 				</div>
 
@@ -158,10 +166,10 @@
 								</div>
 							</div>
 						</div>
-					</div>
 
 
-					<div class="services__row">
+
+
 						<div class="services__row-item-4 services__item-container">
 							<div class="services__row-item">
 								<h5 class="services__row-title">
@@ -223,10 +231,10 @@
 								</div>
 							</div>
 						</div>
-					</div>
 
 
-					<div class="services__row-last">
+
+
 
 						<div class="services__row-item-7 services__item-container-last">
 							<div class="services__row-item">
@@ -248,137 +256,144 @@
 								</div>
 							</div>
 						</div>
+
 					</div>
+					<!--container-->
+
 				</div>
-				<!--container-->
-
-			</div>
-			<!--services-->
+				<!--services-->
 
 
-			<div id="about-us" class="about">
-				<div class="container">
-					<h3 class="about__title title">НЕМНОГО О НАС</h3>
-					<div class="about__line line"></div>
-					<div class="about__text">
-						<p class="about__text-description">
-							Графический дизайн - это про все визуальные образы, которые встречаются в повседневной жизни:
-							рекламные
-							баннеры и афиши, афиши мероприятий, логотипы, визитки,журналы и прочее.
-						</p>
-						<p class="about__text-list">Любые виды ретуши;
-							Цветокоррекция и усиление резкости снимка; <br>
-							Изменение цвета глаз, волос, коррекция или нанесение макияжа на фото; <br>
-							Удаление дефектов кожи, омоложение, отбеливание зубов; <br>
-							Замена фона, добавление предметов и их стирание; <br>
-							Свадебная ретушь; <br>
-							Профессиональный фотомонтаж и стилизация фотографий; <br>
-							Реставрация старых фотографий и раскрашивание черно-белых; <br>
-							Реставрация фотографий для памятников; <br>
-							Создание фотоколлажей из фотографий; <br>
-							Отрисовка фото с нуля; <br>
-							Предметная обтравка и рекламная ретушь; <br>
-							Ретушь ювелирных изделий; <br>
-							Дизайн
-							мы любим то, что мы делаем и делаем все с любовью!</p>
-					</div>
-				</div>
-			</div>
-
-
-			<div id="contact" class="contacts">
-				<div class="container">
-
-					<div class="contacts-body">
-						<div class="contacts-body__item">
-							<div class="contacts-column">
-								<div class="contacts-column__item">
-									<a href="mailto:pshop@internet.ru">pshop@internet.ru</a>
-								</div>
-								<div class="contacts-column__item">
-									<a href="tel:+79991246655">+7(999)124-66-55</a>
-								</div>
-								<div class="contacts-column__item">
-									<a href="https://telegram.me/sanchessssssssssss">Telegram</a>
-								</div>
-
-								<div class="contacts-column__item">
-									<a href="viber://chat?number=%2B79991246655">Viber</a>
-								</div>
-
-								<div class="contacts-column__item">
-									<a href="https://wa.me/79991246655">WhatsApp</a>
-								</div>
-
-
-							</div>
+				<div id="about-us" class="about">
+					<div class="container">
+						<h3 class="about__title title">НЕМНОГО О НАС</h3>
+						<div class="about__line line"></div>
+						<div class="about__text">
+							<p class="about__text-description">
+								Графический дизайн - это про все визуальные образы, которые встречаются в повседневной жизни:
+								рекламные
+								баннеры и афиши, афиши мероприятий, логотипы, визитки,журналы и прочее.
+							</p>
+							<p class="about__text-list">Любые виды ретуши;
+								Цветокоррекция и усиление резкости снимка; <br>
+								Изменение цвета глаз, волос, коррекция или нанесение макияжа на фото; <br>
+								Удаление дефектов кожи, омоложение, отбеливание зубов; <br>
+								Замена фона, добавление предметов и их стирание; <br>
+								Свадебная ретушь; <br>
+								Профессиональный фотомонтаж и стилизация фотографий; <br>
+								Реставрация старых фотографий и раскрашивание черно-белых; <br>
+								Реставрация фотографий для памятников; <br>
+								Создание фотоколлажей из фотографий; <br>
+								Отрисовка фото с нуля; <br>
+								Предметная обтравка и рекламная ретушь; <br>
+								Ретушь ювелирных изделий; <br>
+								Дизайн
+								мы любим то, что мы делаем и делаем все с любовью!</p>
 						</div>
-						<div class="contacts-body__item">
-							<div class="form">
-								<form action="#" id="form" class="form__body">
-									<div class="form__item">
+					</div>
+				</div>
 
-										<input id="formName" placeholder="Ваше имя" type="text" name="name"
-											class="form__input _req">
+
+				<div id="contact" class="contacts">
+					<div class="container">
+
+						<div class="contacts-body">
+							<div class="contacts-body__item">
+								<div class="contacts-column">
+									<div class="contacts-column__item">
+										<a href="mailto:pshop@internet.ru">pshop@internet.ru</a>
 									</div>
-									<div class="form__item">
-
-										<input id="formEmail" placeholder="E-mail" type="text" name="email"
-											class="form__input _req _email">
+									<div class="contacts-column__item">
+										<a href="tel:+79991246655">+7(999)124-66-55</a>
 									</div>
-									<div class="form__item">
-
-										<textarea placeholder="Ваше сообщение" name="message" id="formMessage"
-											class="form__input"></textarea>
+									<div class="contacts-column__item">
+										<a target="_blank" href="https://telegram.me/sanchessssssssssss"> <img
+												class="contacts-icon" src="images/icons/telegram-icon.png" alt="Telegram"> </a>
 									</div>
 
-									<div class="form__item">
-										<div class="form__label">Прикрепить фото</div>
-										<div class="file">
-											<div class="file__item">
-												<input id="formImage" accept=".jpg, .png, .gif" type="file" name="image"
-													class="file__input">
-												<div class="file__button">Выбрать</div>
+									<div class="contacts-column__item">
+										<a target="_blank" href="viber://chat?number=%2B79991246655"><img class="contacts-icon"
+												src="images/icons/viber-icon.png" alt="Viber"></a>
+									</div>
+
+									<div class="contacts-column__item">
+										<a target="_blank" href="https://wa.me/79991246655"><img class="contacts-icon"
+												src="images/icons/whatsapp-icon.png" alt="WhatsApp"></a>
+									</div>
+									<div class="div">
+										<a target="_blank" href="https://www.instagram.com/mexeon_art/?hl=ru"><img
+												class="contacts-icon" src="images/icons/instagram-icon.png" alt="Instagram"></a>
+									</div>
+
+
+								</div>
+							</div>
+							<div class="contacts-body__item">
+								<div class="form">
+									<form action="#" id="form" class="form__body">
+										<div class="form__item">
+
+											<input id="formName" placeholder="Ваше имя" type="text" name="name"
+												class="form__input _req">
+										</div>
+										<div class="form__item">
+
+											<input id="formEmail" placeholder="E-mail" type="text" name="email"
+												class="form__input _req _email">
+										</div>
+										<div class="form__item">
+
+											<textarea placeholder="Ваше сообщение" name="message" id="formMessage"
+												class="form__input"></textarea>
+										</div>
+
+										<div class="form__item">
+											<div class="form__label">Прикрепить фото</div>
+											<div class="file">
+												<div class="file__item">
+													<input id="formImage" accept=".jpg, .png, .gif" type="file" name="image"
+														class="file__input">
+													<div class="file__button">Выбрать</div>
+												</div>
+												<div id="formPreview" class="file__preview"></div>
 											</div>
-											<div id="formPreview" class="file__preview"></div>
 										</div>
-									</div>
-									<div class="form__item">
-										<div class="checkbox">
-											<input id="formAgreement" checked type="checkbox" name="agreement"
-												class="checkbox__input _req">
-											<label for="formAgreement" class="checkbox__label"><span>Я даю свое согласие на
-													обработку
-													персональных данных в соответствии с <a href="">Условиями</a>*</span></label>
+										<div class="form__item">
+											<div class="checkbox">
+												<input id="formAgreement" checked type="checkbox" name="agreement"
+													class="checkbox__input _req">
+												<label for="formAgreement" class="checkbox__label"><span>Я даю свое согласие на
+														обработку
+														персональных данных в соответствии с <a href="">Условиями</a>*</span></label>
+											</div>
 										</div>
-									</div>
-									<button type="submit" class="form__button">Отправить</button>
-								</form>
+										<button type="submit" class="form__button">Отправить</button>
+									</form>
+								</div>
 							</div>
 						</div>
+
 					</div>
-
 				</div>
-			</div>
 
+			</div>
+			<!--content-->
+			<footer>
+				<div class="container">
+					<div class="footer-body">
+
+					</div>
+				</div>
+			</footer>
 		</div>
-		<!--content-->
-		<footer>
-			<div class="container">
-				<div class="footer-body">
-
-				</div>
-			</div>
-		</footer>
-	</div>
-	<!--wrapper-->
+		<!--wrapper-->
 
 
 
 
 
-	<script src="js/select.js"></script>
-	<script src="js/script.js"></script>
+		<script src="js/select.js"></script>
+		<script src="js/script.js"></script>
 </body>
 
 </html>
