--- a/index.html
+++ b/index.html
@@ -301,10 +301,10 @@
 							<div class="contacts-body__item">
 								<div class="contacts-column">
 									<div class="contacts-column__item">
-										<a href="mailto:pshop@internet.ru">pshop@internet.ru</a>
+										<a href="mailto:pshop@internet.ru"><img class="contacts-icon" src="images/icons/mail-icon.png" alt="Mail"></a>
 									</div>
 									<div class="contacts-column__item">
-										<a href="tel:+79991246655">+7(999)124-66-55</a>
+										<a href="tel:+79991246655">	<img class="contacts-icon" src="images/icons/phone-icon.png" alt="Phone"></a>
 									</div>
 									<div class="contacts-column__item">
 										<a target="_blank" href="https://telegram.me/sanchessssssssssss"> <img
