--- a/index.html
+++ b/index.html
@@ -298,13 +298,17 @@
 					<div class="container">
 
 						<div class="contacts-body">
-							<div class="contacts-body__item">
+							<div class="contacts-body__column">
 								<div class="contacts-column">
 									<div class="contacts-column__item">
-										<a href="mailto:pshop@internet.ru"><img class="contacts-icon" src="images/icons/mail-icon.png" alt="Mail"></a>
+										<a href="mailto:pshop@internet.ru">
+											<img class="contacts-icon" src="images/icons/mail-icon.png" alt="Mail">
+										</a>
 									</div>
 									<div class="contacts-column__item">
-										<a href="tel:+79991246655">	<img class="contacts-icon" src="images/icons/phone-icon.png" alt="Phone"></a>
+										<a href="tel:+79991246655">
+											<img class="contacts-icon" src="images/icons/phone-icon.png" alt="Phone">
+										</a>
 									</div>
 									<div class="contacts-column__item">
 										<a target="_blank" href="https://telegram.me/sanchessssssssssss"> <img
